--- a/style.css
+++ b/style.css
@@ -85,3 +85,9 @@
     text-shadow: 5px 5px 15px #00ffff;
     margin-top: 20px;
 }
+
+@media only screen and (max-width:700px){
+    #mainFrame{width: 80%;background-size: 80%;}
+    #mainFrame::before{width: 80%;background-size: 80%;}
+
+}
