--- a/style.css
+++ b/style.css
@@ -85,3 +85,16 @@
     text-shadow: 5px 5px 15px #00ffff;
     margin-top: 20px;
 }
+
+
+@media screen and (max-width:700px){
+    #mainFrame{
+        width: 75vw;
+        background-size: 75vw;
+    }
+
+    #mainFrame::before{
+        width: 75vw;
+        background-size: 75vw;
+    }
+}
